improved StdJsonParser